[project]
name = "mathviz"
version = "0.0.1"
description = "MathViz: visualizing intricate patterns from simple rules"
authors = [
    {name = "Louis Carpentier", email = "louis.carpentier@hotmail.com"}
]
keywords = ["rulesets", "mathematics", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11"
]
dynamic = ["dependencies"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE"

[project.urls]
repository = "https://github.com/LouisCarpentier42/MathViz"

[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mathviz", "mathviz.*"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.setuptools.package-data]
"*" = ["README.md", "pages/*"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]
